# degu

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Makefile  README  README.md  build.sh  degu_ota.c  degu_ota.h  degu_pm.c  degu_pm.h  degu_routing.c  degu_routing.h  degu_test.h  degu_utils.c  degu_utils.h  env.sh  eui64.c  eui64.h  link.sh  machine_adc.c  machine_i2c.c  machine_uart.c  main.c  make-factory-image.sh  md5.c  md5.h  moddegu.c  modmachine.c  modmachine.h  modusocket.c  modzcoap.c  modzephyr.c  mpconfigport.h  overlay-ot.conf  prj_base.conf  prj_degu_evk.conf  repo.sh  select_zephyr_sdk.sh  (+6 more)
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile
manifest-repo/: west.yml
patch/: 0001-temp-build-test-with-latest-zephyr-and-openthread.patch
src/: Makefile  config.c  debug_tool.c  grove_lcd.c  grove_lcd.h  power.c  zephyr_start.c
